# tree-sitter-mld

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mld.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mld/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMld/: mld.h
bindings/swift/TreeSitterMldTests/: TreeSitterMldTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: blocks.txt  html.txt  latex.txt  links.txt  lists.txt  sections.txt  style.txt  tables.txt
test/highlight/: highlight.mld
