[package]
name = "tree-sitter-mld"
description = "Tree-sitter grammar for ocaml-mld files"
version = "0.1.0"
authors = ["Etienne Millon"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mld"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/emillon/tree-sitter-mld"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
